--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.iml
 .gradle
 /local.properties
+/.idea
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/compiler.xml
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
