--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,17 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".anim.MainAnimActivity"
+            android:exported="true" />
+        <activity
+            android:name=".anim.ShareSecondActivity"
+            android:exported="true" />
+        <activity
+            android:name=".anim.ShareFirstActivity"
+            android:exported="true"
+            android:label="@string/title_activity_anim_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".anim.AnimActivity"
             android:exported="true" />
         <activity
