--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+//    implementation 'com.zwwl.bindinterface:bindinterface-annotation:2.0.0-SNAPSHOT'
+//    implementation 'com.lelink:lelink:2.0.1@aar'
+//    implementation 'com.alibaba:aplipay-sdk:15.8.03@aar'
+//    implementation 'com.rich3:oauth:4.0.5@aar'
+
 }
 
 task task2 (){
