--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://nexus.douyuxingchen.com/repository/maven-public/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://nexus.douyuxingchen.com/repository/maven-public/"
+        }
     }
 }
 
