--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,11 @@ dependencies {
 //    implementation "androidx.activity:activity-ktx:1.6.0"
 //    implementation "androidx.fragment:fragment-ktx:1.5.3"
 
+    // paging3
+    implementation 'androidx.paging:paging-runtime:3.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
 
 task task2 (){
