--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,18 +44,21 @@
 
     <application
         android:name=".MyApplication"
+        android:allowAudioPlaybackCapture="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:allowAudioPlaybackCapture="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".fullscreen.FullScreenActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
+        <activity
             android:name=".func.FuncActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".paging3.ui.Paging3Activity"
@@ -113,9 +116,9 @@
         <activity android:name=".Page2Activity" />
         <activity android:name=".Page1Activity" />
         <activity android:name=".proxy.ProxyActivity" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
